--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.10",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.1",
+    "react-spinners": "^0.14.1",
     "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
