--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "react-intersection-observer": "^9.13.0",
     "react-spinners": "^0.14.1",
     "tailwind-merge": "^2.4.0"
   },
