--- a/package.json
+++ b/package.json
@@ -1,33 +1,37 @@
 {
-  "name": "layout",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "axios": "^1.7.2",
-    "clsx": "^2.1.1",
-    "framer-motion": "^11.3.10",
-    "next": "14.2.5",
-    "next-themes": "^0.3.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.52.1",
-    "react-intersection-observer": "^9.13.0",
-    "react-spinners": "^0.14.1",
-    "tailwind-merge": "^2.4.0"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "sass": "^1.77.8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+	"name": "layout",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"axios": "^1.7.2",
+		"clsx": "^2.1.1",
+		"framer-motion": "^11.3.10",
+		"lottie-react": "^2.4.0",
+		"next": "14.2.5",
+		"next-themes": "^0.3.0",
+		"react": "^18",
+		"react-dom": "^18",
+		"react-hook-form": "^7.52.1",
+		"react-intersection-observer": "^9.13.0",
+		"react-lottie": "^1.2.4",
+		"react-spinners": "^0.14.1",
+		"react-three-fiber": "^6.0.13",
+		"tailwind-merge": "^2.4.0"
+	},
+	"devDependencies": {
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"@types/react-lottie": "^1.2.10",
+		"postcss": "^8",
+		"sass": "^1.77.8",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5"
+	}
 }
