--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@react-three/drei": "^9.109.2",
 		"axios": "^1.7.2",
 		"clsx": "^2.1.1",
 		"framer-motion": "^11.3.10",
