--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@react-three/drei": "^9.109.2",
+		"@react-three/fiber": "^8.16.8",
 		"axios": "^1.7.2",
 		"clsx": "^2.1.1",
 		"framer-motion": "^11.3.10",
@@ -23,7 +24,8 @@
 		"react-lottie": "^1.2.4",
 		"react-spinners": "^0.14.1",
 		"react-three-fiber": "^6.0.13",
-		"tailwind-merge": "^2.4.0"
+		"tailwind-merge": "^2.4.0",
+		"three": "^0.167.0"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
